# erbfmt

./: .editorconfig  .gitignore  AGENTS.md  Cargo.toml  README.md  README_ja.md  erbfmt.json  memo.md
.github/workflows/: ci.yml  docs.yml  release-binaries.yml  release.yml
docs/: Configuration.md  Development.md  Distribution.md  FirstRelease.md  FormatterIgnoreDesign.md  Ignore.md  LintRules.md  Release.md  Roadmap.md  RubyGem.md  VSCode.md
docs/schema/: erbfmt.schema.json
editors/vscode/: .vscodeignore  README.md  README_ja.md  biome.json  extension.js  package-lock.json  package.json  tsconfig.json
samples/: formatter-audit.html.erb  formatter-edge-cases.html.erb  formatter-ignore-next.html.erb  html-parse-errors.html.erb  lint-next.html.erb  real-template-audit.html.erb  sample.erb  sample.html.erb  stability.html.erb
scripts/: package-binary.sh  publish-rubygems.sh  version.rb
scripts/test/: version_test.rb
site/: index.html
site/assets/: highlight.js  styles.css
site/cli/: index.html
site/configuration/: index.html
site/ja/: index.html
src/: config.rs  formatter.rs  html.rs  ignore.rs  lexer.rs  linter.rs  main.rs  mixed_parser.rs  parser.rs  ruby_format.rs
src/formatter/: engine.rs  erb.rs  erb_block.rs  ignore_directive.rs  inline.rs  mod.rs  options.rs  preserve.rs  ruby_wrap.rs  tag.rs  tests.rs
src/html/: mod.rs  tag.rs  tests.rs  token.rs  tokenizer.rs
src/lexer/: classifier.rs  error.rs  html_context.rs  location.rs  mod.rs  tests.rs  token.rs
src/linter/: diagnostic.rs  erb.rs  html_rules.rs  mod.rs  tests.rs  (+2 more)
tests/: cli.rs
(+27 files in other folders)
