[package]
name = "erbfmt"
version = "0.0.0-dev"
edition = "2024"
description = "Formatter and linter for HTML ERB templates."
license = "MIT"
readme = "README.md"
repository = "https://github.com/hinamimi/erbfmt"
keywords = ["erb", "formatter", "linter", "rails"]
categories = ["development-tools"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[dev-dependencies]
insta = "1.48.0"
